--- a/style.css
+++ b/style.css
@@ -1,35 +1,72 @@
 /*CSS style*/
 
+@import url(http://fonts.googleapis.com/css?family=Cantata+One|Fanwood+Text:400,400italic);
+
 body {
 /*  min-height: 2000px;*/
   padding-top: 50px;
   background-image: url(img/bg9.png);
 }
 
-.wrapper {
-  background:transparent;
+header {
+}
+
+p {
+  font-family: 'Fanwood Text', serif;
+  font-size: 14pt;
+  text-align: justify;
 }
 
 img {
   max-width: 100%;
 }
 
+.wrapper {
+  background-image: url(img/bg10.png);
+}
+
+.title {
+  font-family: 'Fanwood Text', serif;
+  font-size: 48pt;
+  text-align: center;
+}
+
+.front {
+  font-size: 20pt;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.paticka {
+  text-align: center;
+  vertical-align: middle;
+}
+
 footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 30px;
-  background-color: yellow;
+  height: 25px;
+  background-image: url(img/bg10.png);
+  border-top: 1px solid grey;
 }
 
 /*
 body > .container {
   padding: 10px 0 0 0;
 }
-*/
 
 .container .text-muted {
   margin: 20px 0;
+}
+*/
+
+.french {
+  display: none;
+}
+
+.english {
+  display: none;
 }
 
 footer > .container {
@@ -42,19 +79,21 @@ footer > .container {
     background-color: yellow;
   }
 
-  footer {
-  background-color: green;
+  .title {
+  font-size: 40pt;
+  text-align: center;
   }
 }
 
 
-@media (max-width: 480px) {
+@media screen and (max-width: 480px){
   body {
     background-color: green;
   }
 
-  footer {
-  background-color: yellow;
+  .title {
+  font-size: 32pt;
+  text-align: center;
   }
 }
 
