--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1411,8 +1411,11 @@ th {
   text-align: left;
 }
 .table {
-  width: 100%;
+  margin: 0 auto;
+  width: 50%;
   margin-bottom: 20px;
+  font-family: "Times New Roman", Times, serif;
+  border: 1px solid #5c0808;
 }
 .table > thead > tr > th,
 .table > tbody > tr > th,
@@ -1420,14 +1423,14 @@ th {
 .table > thead > tr > td,
 .table > tbody > tr > td,
 .table > tfoot > tr > td {
-  padding: 8px;
+  padding: 3px;
   line-height: 1.42857143;
   vertical-align: top;
-  border-top: 1px solid #ddd;
+/*  border-top: 1px solid #5c0808;*/
 }
 .table > thead > tr > th {
   vertical-align: bottom;
-  border-bottom: 2px solid #ddd;
+  border-bottom: 2px solid #5c0808;
 }
 .table > caption + thead > tr:first-child > th,
 .table > colgroup + thead > tr:first-child > th,
@@ -1452,7 +1455,7 @@ th {
   padding: 5px;
 }
 .table-bordered {
-  border: 1px solid #ddd;
+  border: 1px solid #5c0808;
 }
 .table-bordered > thead > tr > th,
 .table-bordered > tbody > tr > th,
@@ -1460,7 +1463,7 @@ th {
 .table-bordered > thead > tr > td,
 .table-bordered > tbody > tr > td,
 .table-bordered > tfoot > tr > td {
-  border: 1px solid #ddd;
+  border: 1px solid #5c0808;
 }
 .table-bordered > thead > tr > th,
 .table-bordered > thead > tr > td {
