--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ header {
 }
 
 p {
-  font-family: "Times New Roman", Times, serif;*/
+  font-family: "Times New Roman", Times, serif;
   text-align: justify;
   padding: 0;
   margin: 0;
@@ -150,6 +150,16 @@ body > .container {
   float: left;
   margin: 0 15px;
 }
+
+.gallery {
+  display: inline-block;
+  margin-top: 20px;
+}
+
+.popis {
+  font-family: "Times New Roman", Times, serif;
+}
+
 
 footer > .container {
   padding-right: 15px;
