--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
 /*  min-height: 2000px;*/
   padding-top: 50px;
   padding-bottom: 25px;
-  background-image: url(img/bg9.png);
+  background-image: url(../img/bg9.png);
 }
 
 header {
@@ -57,7 +57,7 @@ aside {
 }
 
 .wrapper {
-  background-image: url(img/bg10.png);
+  background-image: url(../img/bg10.png);
 }
 
 .title {
@@ -87,7 +87,7 @@ footer {
   bottom: 0;
   width: 100%;
   height: 25px;
-  background-image: url(img/bg10.png);
+  background-image: url(../img/bg10.png);
   border-top: 1px solid grey;
 }
 
@@ -160,10 +160,129 @@ body > .container {
   font-family: "Times New Roman", Times, serif;
 }
 
-.map {
-  margin: 0 auto;
-  height: 600px;
+#map {
+  width: 100%;
+  height: 300px;
+  float: left;
+  border: 1px solid #8a6d3b;
+  margin-bottom: 20px;
+}
+
+#list {
+  float: left;
+  width: 28%;
+  height: 670px;
+  overflow: auto;
+  border: 1px solid #8a6d3b;
+  font-family: "Times New Roman", Times, serif;
+  margin: 0 0 10px 0;
+}
+
+.list td {
+  padding-left: 5px;
+  padding-right: 5px;
+  border-bottom: 1px solid #bf9f68;
+}
+
+.three {
+  background-color: rgb(229,196,69);
+}
+
+.unity{
+  background-color: rgb(193,179,124);
+}
+
+.gall{
+  background-color: rgb(189,162,148);
+}
+
+.devel{
+  background-color: rgb(218,215,208);
+}
+
+.sloup1 {
+  width: 35%;
+  text-align: justify;
+}
+
+.sloup2 {
+  width: 5%;
+  text-align: center;
+
+}
+
+table a:link {
+  text-decoration: none;
+}
+
+.home{
+  margin-left: -17px;
+  margin-top: -20px;
+}
+
+#formular {
+  margin-top: 320px;
+  font-family: "Times New Roman", Times, serif;
+  font-size: 12pt;
+  line-height: 1.2em;
+}
+
+#coo {
+  width: 10%;
+  padding: 3px 0;
+  margin-right: 10px;
+}
+
+.but {
+  padding: 3px 10px;
+  margin-bottom: 10px;
+}
+
+.but2 {
+  padding: 3px 10px;
+  margin-bottom: 10px;
+  float: right;
+}
+
+#obsah-popis {
+  font-family: "Times New Roman", Times, serif;
+  color: #ece2bb;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  float: left;
+  width: 48%;
+}
+
+.nazev {
+  padding: 0;
+  margin: 0;
+}
+
+.popis {
+  font-size: 13pt;
+  text-align: justify;
+  padding-right: 10px;
+  margin: 0;
+  max-height: 400px;
+  overflow: auto;
+}
+
+#obsah-model {
+  margin-top: 70px;
+  margin-bottom: 10px;
+  float: right;
   width: 50%;
+/*  overflow-y: hidden;*/
+}
+
+.photo {
+  float: right;
+}
+
+.frame {
+  width: 100%;
+  height: 400px;
+/*  overflow-y: hidden;*/
 }
 
 footer > .container {
@@ -172,22 +291,15 @@ footer > .container {
 }
 
 @media screen and (max-width: 768px) {
-  body {
-    background-color: yellow;
-  }
-
   .title {
   font-size: 40pt;
   text-align: center;
   }
+
 }
 
 
 @media screen and (max-width: 480px){
-  body {
-    background-color: green;
-  }
-
   .title {
   font-size: 32pt;
   text-align: center;
