--- a/css/bootstrap/bootstrap.css
+++ b/css/bootstrap/bootstrap.css
@@ -3025,7 +3025,7 @@ input[type="button"].btn-block {
   margin: 2px 0 0;
   font-size: 18px;
   list-style: none;
-  background-image: url(../img/bg9.png);
+  background-image: url(../../img/bg9.png);
   background-clip: padding-box;
   border: 1px solid #ccc;
   border: 1px solid rgba(0, 0, 0, .15);
@@ -3945,7 +3945,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar-default {
 /*  background-color: #f8f8f8;*/
-  background-image: url(../img/bg9.png);
+  background-image: url(../../img/bg9.png);
   border-color: #e7e7e7;
 }
 .navbar-default .navbar-brand {
