--- a/css/style.css
+++ b/css/style.css
@@ -180,14 +180,8 @@ body > .container {
 #map {
   width: 100%;
   height: 450px; /*300px*/
-  border: 1px solid #8a6d3b;
+  border: 2px solid #8a6d3b;
   margin-bottom: 5px;
-}
-
-.but2 {
-  padding: 3px 10px;
-  margin: 5px 0;
-/*  float: right;*/
 }
 
 #swipe {
@@ -215,7 +209,13 @@ input[type=range] {
 
 .but {
   padding: 3px 10px;
-  margin-bottom: 10px;
+  margin-bottom: 10px;*/
+/*  margin: 5px 0;*/
+  margin-right: 10px;
+}
+
+.but:disabled {
+  color: #ababab;
 }
 
 .modelsec {
@@ -230,13 +230,22 @@ input[type=range] {
   background-color: #f0f0f0;
 }
 
+.imgMod {
+  border-left: 2px solid #ababab;
+  border-top: 2px solid #ababab;
+}
+
+.hidden {
+  display: none;
+}
+
 #obsah-popis {
   font-family: "Times New Roman", Times, serif;
   color: #ece2bb;
   margin-top: 20px;
   margin-bottom: 10px;
-  float: left;
-  width: 48%;
+  width: 68%;
+  float: right;
 }
 
 .nazev {
@@ -254,7 +263,10 @@ input[type=range] {
 }
 
 .photo {
-  float: right;
+  float: left;
+  width: 30%;
+  margin-top: 20px;
+  margin-bottom: 10px;
 }
 
 footer > .container {
