--- a/css/bootstrap/bootstrap.css
+++ b/css/bootstrap/bootstrap.css
@@ -5,11 +5,13 @@
  */
 
 /*! normalize.css v3.0.0 | MIT License | git.io/normalize */
-@import url(http://fonts.googleapis.com/css?family=Cantata+One|Fanwood+Text:400,400italic);
+
+@import url(http://fonts.googleapis.com/css?family=Alegreya:400italic,700italic,900italic,400,700,900);
 
 html {
-  font-family: 'Fanwood Text', serif;
+/*  font-family: 'Fanwood Text', serif;*/
 /*  font-family: sans-serif;*/
+  font-family: "Times New Roman", Times, serif;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
 }
@@ -737,8 +739,8 @@ pre code {
   overflow-y: scroll;
 }
 .container {
-  padding-right: 30px;
-  padding-left: 30px;
+  padding-right: 12px;
+  padding-left: 12px;
   margin-right: auto;
   margin-left: auto;
 }
@@ -3750,13 +3752,24 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   font-size: 24px;
   line-height: 20px;
 }
+.navbar-brand-right {
+  float: right;
+  height: 50px;
+  padding: 15px 15px;
+  font-size: 24px;
+  line-height: 20px;
+}
 .navbar-brand:hover,
-.navbar-brand:focus {
+.navbar-brand:focus,
+.navbar-brand-right:hover,
+.navbar-brand-right:focus {
   text-decoration: none;
 }
 @media (min-width: 768px) {
   .navbar > .container .navbar-brand,
-  .navbar > .container-fluid .navbar-brand {
+  .navbar > .container-fluid .navbar-brand,
+  .navbar > .container .navbar-brand-right,
+  .navbar > .container-fluid .navbar-brand-right, {
     margin-left: -15px;
   }
 }
@@ -3949,11 +3962,14 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   background-image: url(../../img/bg9.png);
   border-color: #e7e7e7;
 }
-.navbar-default .navbar-brand {
+.navbar-default .navbar-brand,
+.navbar-default .navbar-brand-right {
   color: #ece2bb;
 }
 .navbar-default .navbar-brand:hover,
-.navbar-default .navbar-brand:focus {
+.navbar-default .navbar-brand:focus,
+.navbar-default .navbar-brand-right:hover,
+.navbar-default .navbar-brand-right:focus {
   color: #8f8f8f;
   background-color: transparent;
 }
